--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -2,6 +2,10 @@
 
 <% if current_user %>
   <p>Ola <%= current_user.nome %>!</p>
+
+  <a href="/turmas/new">Criar Turma</a>
+  <a href="/turmas">Listar Turmas</a>
+
   <p> <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %> </p>
 
 <% else %>
