Adicionamento de Disciplinas na Homepage

--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -5,6 +5,10 @@
 
   <a href="/turmas/new">Criar Turma</a>
   <a href="/turmas">Listar Turmas</a>
+  <br>
+  <br>
+  <a href="/disciplinas/new">Criar Disciplina</a>
+  <a href="/disciplinas">Listar Disciplinas</a>
 
   <p> <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %> </p>
 
