Adicionamento do link de volta pra Homepage nas paginas de Disciplina

--- a/app/views/disciplinas/edit.html.erb
+++ b/app/views/disciplinas/edit.html.erb
@@ -1,5 +1,8 @@
 <h1>Editing disciplina</h1>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
 <%= render "form", disciplina: @disciplina %>
 
 <br>
