--- a/app/views/disciplinas/_form.html.erb
+++ b/app/views/disciplinas/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div>
+    <%= form.label :ano_letivo, style: "display: block" %>
+    <%= form.text_field :ano_letivo %>
+  </div>
+
+  <div>
     <%= form.label :turma_id, style: "display: block" %>
     <%= form.select :turma_id, @turmas, {}, {class: "form-control"} %>
   </div>
