Modificacao na View Show de Disciplina, para mostrar os seus atributos relevantes

--- a/app/views/disciplinas/_disciplina.html.erb
+++ b/app/views/disciplinas/_disciplina.html.erb
@@ -4,4 +4,24 @@
     <%= disciplina.nome %>
   </p>
 
+  <p>
+    <strong>Ano Letivo:</strong>
+    <%= disciplina.ano_letivo %>
+  </p>
+
+  <p>
+    <strong>Turma:</strong>
+    <%= disciplina.turma.letra_turma %>
+  </p>
+
+  <p>
+    <strong>Ano:</strong>
+    <%= disciplina.turma.ano %>
+  </p>
+
+  <p>
+    <strong>Ano Letivo Turma:</strong>
+    <%= disciplina.turma.ano_letivo %>
+  </p>
+
 </div>
