--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -9,6 +9,10 @@
   <br>
   <a href="/disciplinas/new">Criar Disciplina</a>
   <a href="/disciplinas">Listar Disciplinas</a>
+  <br>
+  <br>
+  <a href="/alunos/new">Criar Aluno</a>
+  <a href="/alunos">Listar Alunos</a>
 
   <p> <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %> </p>
 
