Ajuste na View de Aluno para melhorar as informacoes mostrada

--- a/app/views/alunos/_aluno.html.erb
+++ b/app/views/alunos/_aluno.html.erb
@@ -4,4 +4,19 @@
     <%= aluno.nome %>
   </p>
 
+  <p>
+    <strong>Turma:</strong>
+    <%= aluno.turma.letra_turma %>
+  </p>
+
+  <p>
+    <strong>Ano:</strong>
+    <%= aluno.turma.ano %>
+  </p>
+
+  <p>
+    <strong>Ano Letivo Turma:</strong>
+    <%= aluno.turma.ano_letivo %>
+  </p>
+
 </div>
