--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -13,6 +13,9 @@
   <br>
   <a href="/alunos/new">Criar Aluno</a>
   <a href="/alunos">Listar Alunos</a>
+  <br>
+  <a href="/atividades/new">Criar Atividade</a>
+  <a href="/atividades">Listar Atividades</a>
 
   <p> <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %> </p>
 
