Adicionamento do Link de retorno para Homepage nas paginas de Atividade

--- a/app/views/atividades/edit.html.erb
+++ b/app/views/atividades/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Editing atividade</h1>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
+
 <%= render "form", atividade: @atividade %>
 
 <br>
