Adicionamento do Select de Disciplina no form de Atividade

--- a/app/views/atividades/_form.html.erb
+++ b/app/views/atividades/_form.html.erb
@@ -32,6 +32,11 @@
   </div>
 
   <div>
+    <%= form.label :disciplina_id, style: "display: block" %>
+    <%= form.select :disciplina_id, @disciplinas, {}, {class: "form-control"} %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
