Ajuste no Show de Atividade para aparecer os dados mais relevantes

--- a/app/views/atividades/_atividade.html.erb
+++ b/app/views/atividades/_atividade.html.erb
@@ -19,4 +19,29 @@
     <%= atividade.data %>
   </p>
 
+  <p>
+    <strong>Disciplina:</strong>
+    <%= atividade.disciplina.nome %>
+  </p>
+
+  <p>
+    <strong> Ano Letivo:</strong>
+    <%= atividade.disciplina.ano_letivo %>
+  </p>
+
+  <p>
+    <strong>Turma:</strong>
+    <%= atividade.disciplina.turma.letra_turma %>
+  </p>
+
+  <p>
+    <strong>Ano Turma:</strong>
+    <%= atividade.disciplina.turma.ano %>
+  </p>
+
+  <p>
+    <strong>Ano Letivo Turma:</strong>
+    <%= atividade.disciplina.turma.ano_letivo %>
+  </p>
+
 </div>
