Adicionamento do link de retorno pra Homepage  nas Views de Avaliacao Aluno

--- a/app/views/avaliacao_alunos/edit.html.erb
+++ b/app/views/avaliacao_alunos/edit.html.erb
@@ -1,5 +1,10 @@
 <h1>Editing avaliacao aluno</h1>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
+
+
 <%= render "form", avaliacao_aluno: @avaliacao_aluno %>
 
 <br>
