--- a/app/views/avaliacao_alunos/index.html.erb
+++ b/app/views/avaliacao_alunos/index.html.erb
@@ -1,5 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
 <h1>Avaliacao alunos</h1>
 
 <div id="avaliacao_alunos">
