--- a/app/views/home_page/home.html.erb
+++ b/app/views/home_page/home.html.erb
@@ -17,6 +17,10 @@
   <br>
   <a href="/atividades/new">Criar Atividade</a>
   <a href="/atividades">Listar Atividades</a>
+  <br>
+  <br>
+  <a href="/avaliacao_alunos/new">Criar Avaliacao Aluno</a>
+  <a href="/avaliacao_alunos">Listar Avaliacao Alunos</a>
 
   <p> <%= link_to "Logout", destroy_user_session_path, 'data-turbo-method': :delete %> </p>
 
