--- a/app/views/avaliacao_alunos/new.html.erb
+++ b/app/views/avaliacao_alunos/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New avaliacao aluno</h1>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
 <%= render "form", avaliacao_aluno: @avaliacao_aluno %>
 
 <br>
