--- a/app/views/avaliacao_alunos/show.html.erb
+++ b/app/views/avaliacao_alunos/show.html.erb
@@ -1,5 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
+<%= link_to "Voltar para a home", "/" %>
+<br>
+
 <%= render @avaliacao_aluno %>
 
 <div>
